Anim/FileIO: Fixed GIF export reliance on ".gif" file suffix.

GIF rendering previously errored when the desired output
file name ended in something other than ".gif".
KisVideoSaver now properly uses the "image/gif" mimeType
instead of the file suffix for finishing the GIF export process.

BUG:506976